    extra info for errors
  * add method disable_all_tracing(&block) to execute a block without
    capturing metrics
  * newrelic_ignore now blocks all instrumentation collection for
    the specified actions
  * added doc to method_tracer API and removed second arg
    requirement for add_method_tracer call
  * instrumentation for Net::HTTP
    
v2.9.4
  * Clamp size of data sent to server
  * Reset statistics for passenger when forking to avoid erroneous data
  * Fix problem deserializing errors from the server
  * Fix incompatibility with postgres introduced in 2.9.

v2.9.3.
  * Fix startup failure in Windows due to memory sampler
  * Add JRuby environment information
   
v2.9.2.
  * change default apdex_t to 0.5 seconds 
  * fix bug in deployments introduced by multi_homed setting
  * support overriding the log in the agent api
  * fix JRuby problem using objectspace
  * display custom parameters when looking at transactions in dev mode 
  * display count of sql statements on the list of transactions in dev mode
  * fixes for merb--thanks to Carl Lerche

v2.9.1.
  * add newrelic_ignore_apdex method to controller classes to allow
    you to omit some actions from apdex statistics
  * Add hook for Passenger shutdown events to get more timely shutdown
    notices; this will help in more accurate memory readings in 
    Passenger
  * add newrelic_notice_error to Object class
  * optional ability to verify SSL certificates, note that this has some 
    performance and reliability implications
  * support multi-homed host with multiple apps running on duplicate
    ports
  
v2.9.0.
  Noteworthy Enhancements
  * give visibility to templates and partials in Rails 2.1 and later, in
    dev mode and production
  * change active record metrics to capture statistics in adapter log()
    call, resulting in lower overhead and improved visibility into
    different DB operations; only AR operations that are not hitting the
    query cache will be measured to avoid overhead